update erver enhanced tests
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/streaming_server_enhanced/testing/pytest.ini
+++ b/operators/streaming_server_enhanced/testing/pytest.ini
@@ -9,6 +9,7 @@ markers =
     unit: Unit tests (isolated components)
     functional: Functional tests (component interactions)
     golden_frame: Golden frame visual regression tests
+    bindings: Python binding tests (pybind11 interface tests)
     hardware: Hardware-dependent tests (skip with --skip-hardware-tests)
     slow: Slow tests (> 5 seconds, skip with --skip-slow-tests)
     parametrized: Parametrized tests (multiple scenarios)
