--- a/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
+++ b/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
@@ -23,13 +23,19 @@ add_library(visualizer_icardio SHARED
   visualizer_icardio.cu
   visualizer_icardio.cuh
   visualizer_icardio.hpp
-  )
+)
 
-target_link_libraries(visualizer_icardio
+target_link_libraries(visualizer_icardio PUBLIC
     holoscan::core
-    holoscan::infer
     holoscan::infer_utils
-    CUDA::cudart)
+    CUDA::cudart
+)
+
+if("${holoscan_VERSION}" VERSION_GREATER_EQUAL "3.7")
+  target_link_libraries(visualizer_icardio PUBLIC holoscan::holoinfer_utils)
+else()
+  target_link_libraries(visualizer_icardio PUBLIC holoscan::infer)
+endif()
 
 target_include_directories(visualizer_icardio INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(visualizer_icardio PRIVATE HOLOSCAN_MAJOR_VERSION=${holoscan_VERSION_MAJOR})
