--- a/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
+++ b/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
@@ -25,16 +25,18 @@ add_library(visualizer_icardio SHARED
   visualizer_icardio.hpp
 )
 
-target_link_libraries(visualizer_icardio PUBLIC
+target_link_libraries(visualizer_icardio
+  PUBLIC
     holoscan::core
+  PRIVATE
     holoscan::infer_utils
     CUDA::cudart
 )
 
 if("${holoscan_VERSION}" VERSION_GREATER_EQUAL "3.7")
-  target_link_libraries(visualizer_icardio PUBLIC holoscan::holoinfer_utils)
+  target_link_libraries(visualizer_icardio PRIVATE holoscan::holoinfer_utils)
 else()
-  target_link_libraries(visualizer_icardio PUBLIC holoscan::infer)
+  target_link_libraries(visualizer_icardio PRIVATE holoscan::infer)
 endif()
 
 target_include_directories(visualizer_icardio INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
