Op: Update "visualizer_icardio" operator link interface (#1140)
* Op: Update visualizer_icardio operator link interface

Update to better reflect dependency on planned Holoscan SDK v3.7 target:
- infer_utils is a C++ target used at build and runtime
- infer_utils symbols are exposed in the operator header interface
- holoscan::infer is no longer required for visualizer_icardio, removed
  extraneous target and header

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Fix copyright checks

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Address PR feedback

co-authored-by: Alexis Girault <agirault@nvidia.com>
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Fix copyright headers

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Update applications/multiai_ultrasound/operators/visualizer_icardio/visualizer_icardio.cpp

Co-authored-by: Alexis Girault <agirault@users.noreply.github.com>
Signed-off-by: Tom Birdsong <40648863+tbirdso@users.noreply.github.com>

* Address PR feedback

Add explicit HoloInfer namespace, previously implicit from
holoinfer_utils.hpp

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

---------

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>
Signed-off-by: Tom Birdsong <40648863+tbirdso@users.noreply.github.com>
Co-authored-by: Alexis Girault <agirault@nvidia.com>
Co-authored-by: Alexis Girault <agirault@users.noreply.github.com>
Signed-off-by: eagostini <eagostini@nvidia.com>

--- a/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
+++ b/applications/multiai_ultrasound/operators/visualizer_icardio/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -23,13 +23,21 @@ add_library(visualizer_icardio SHARED
   visualizer_icardio.cu
   visualizer_icardio.cuh
   visualizer_icardio.hpp
-  )
+)
 
 target_link_libraries(visualizer_icardio
+  PUBLIC
     holoscan::core
-    holoscan::infer
+  PRIVATE
     holoscan::infer_utils
-    CUDA::cudart)
+    CUDA::cudart
+)
+
+if("${holoscan_VERSION}" VERSION_GREATER_EQUAL "3.7")
+  target_link_libraries(visualizer_icardio PRIVATE holoscan::holoinfer_utils)
+else()
+  target_link_libraries(visualizer_icardio PRIVATE holoscan::infer)
+endif()
 
 target_include_directories(visualizer_icardio INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(visualizer_icardio PRIVATE HOLOSCAN_MAJOR_VERSION=${holoscan_VERSION_MAJOR})
