App: Fix missing object_detection_torch header
Apply fix for upcoming Holoscan SDK v3.7, which moves the
"holoscan::inference::node_type" definition from the "holoscan::infer"
target into the "holoscan::holoinfer_util" target

Backwards compatible with <=v3.6

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/CMakeLists.txt
+++ b/applications/object_detection_torch/CMakeLists.txt
@@ -66,6 +66,8 @@ target_link_libraries(object_detection_torch
     holoscan::ops::inference
     holoscan::ops::inference_processor
     holoscan::ops::holoviz
+    holoscan::infer
+    $<TARGET_NAME_IF_EXISTS:holoscan::holoinfer_utils>
     $<TARGET_NAME_IF_EXISTS:holoscan::aja>
 )
 
